# Schism

./: .gitignore  CNAME  EVALUATION.md  README.md  copy-code.js  index.html  pyproject.toml  readme.md  styles.css  syntax-highlight.css
.github/workflows/: publish.yaml
demos/greetings/: greetings.py  schism.config.yaml
docs/: README.md  index.html
docs/css/: styles.css
schism/: __init__.py  _bevy_setup.py  bootstrap.py  bridges.py  cli_script.py  configs.py  controllers.py  entry_points.py  middleware.py  middlewares.py  run.py  serialization.py  service_manager.py  service_providers.py  services.py  wiring_strategies.py
schism/bridges/: __init__.py  base.py  bases.py  bridge_helpers.py  simple_tcp_bridge.py
schism/enum_types/: enum.py  option.py
schism/ext/bridges/: simple_tcp.py
schism/union_types/: option.py
schism/utils/: class_properties.py  options.py  singleton_classes.py
schism/wiring_strategies/: __init__.py  base.py  bridge_wiring.py  direct_wiring.py
site/css/: styles.css  syntax-highlight.css
site/js/: copy-code.js  theme-toggle.js
tests/: conftest.py  schism.config.yaml  service_test.py  test_bridge_injection.py  test_bridges.py  test_options.py  test_service_integration.py  test_service_manager.py
