[tool.poetry]
name = "schism"
version = "0.1.3"
description = "Schism is an autowiring library that makes modularity simple in monolithes and simplifies code sharing in microservices."
authors = ["ZechCodes <hi@zech.codes>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZechCodes/Schism"

[tool.poetry.scripts]
schism = "schism.cli_script:run"

[tool.poetry.dependencies]
python = "^3.12"
bevy = "^2.0.2"
nubby = {extras = ["yaml"], version = "^0.0.2"}
pydantic = "^2.9.2"
tramp = "^0.1.11"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
