[project]
name = "schism"
version = "0.2.0b1"
description = "Schism is an autowiring library that makes modularity simple in monolithes and simplifies code sharing in microservices."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Zech Zimmerman", email = "hi@zech.codes"}
]
dependencies = [
    "bevy~=3.0b0",
    "nubby[yaml]~=0.1",
    "pydantic>=2.11.1",
    "tramp>=2025.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
schism = "schism.cli_script:run"

[project.urls]
Repository = "https://github.com/ZechCodes/Schism"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schism"]
